fix: attack fixes to win_office_dll_load.yml

--- a/win_office_dll_load.yml
+++ b/win_office_dll_load.yml
@@ -6,8 +6,10 @@ references:
     - https://twitter.com/SBousseaden/status/1161919993652662273
 date: 2019/11/06
 tags:
+    - attack.execution
     - attack.persistence
     - attack.defense_evasion
+    - attack.t1047
     - attack.t1122
 logsource:
     product: windows
