fix: typo in win_office_dll_load.yml

--- a/win_office_dll_load.yml
+++ b/win_office_dll_load.yml
@@ -20,7 +20,7 @@ detection:
         Image:
             - '*\WINWORD.EXE'
             - '*\EXCEL.EXE'
-            - '*\POWERPOINT.EXE'
+            - '*\POWERPNT.EXE'
         ImageLoaded:
             - '*\wmiutils.dll'
             - '*\taskschd.dll'
