More suspicious dlls added
taken from https://github.com/Neo23x0/sigma/blob/845d67f1f3a439d9559d55cc8fa0659c4a715dc6/rules/windows/sysmon/win_susp_winword_wmidll_load.yml

--- a/win_office_dll_load.yml
+++ b/win_office_dll_load.yml
@@ -21,9 +21,14 @@ detection:
             - '*\WINWORD.EXE'
             - '*\EXCEL.EXE'
             - '*\POWERPNT.EXE'
+            - '*\OUTLOOK.EXE'
         ImageLoaded:
             - '*\wmiutils.dll'
             - '*\taskschd.dll'
+            - '*\wbemcomn.dll'
+            - '*\wbemprox.dll'
+            - '*\wbemdisp.dll'
+            - '*\wbemsvc.dll'
     condition: selection
 falsepositives:
     - Unknown
